--- a/Day-01/05-ES6/package.json
+++ b/Day-01/05-ES6/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0"
   }
 }
